[package]
name = "ToughORAM_client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(any(target_feature = "avx2", target_feature = "avx"))'.dependencies]
blake2 = { version = "0.9.2", default-features = false, features = ["simd"] }

[target.'cfg(not(any(target_feature = "avx2", target_feature = "avx")))'.dependencies]
blake2 = { version = "0.9.2", default-features = false }

[dependencies]
aes = { version = "0.7.5", default-features = false, features = ["ctr"] }
aligned-cmov = "2.0.0"
flume = "0.10"
lazy_static = "1.4"
rand_core = { version = "0.6", default-features = false }
rand_hc = "0.3"
tokio = { version = "1", features = ["full"] }
