[package]
name = "sparkenclave"
version = "1.0.0"
authors = ["Xiang Li <Xiang.Leee@outlook.com>"]
license = "GPL-3.0"
edition = "2018"

[lib]
name = "oramenclave"
crate-type = ["staticlib"]

[features]
default = []
no_asm_insecure = ["aligned-cmov/no_asm_insecure"]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "master" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "master", features = ["thread"] }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "master"  }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "master"  }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "master"  }
sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "master"  }
sgx_tprotected_fs = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "master" }
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "master"  }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "master"  }
sgx_signal = { git = "https://github.com/apache/teaclave-sgx-sdk.git", branch = "master"  }

[target.'cfg(any(target_feature = "avx2", target_feature = "avx"))'.dependencies]
blake2 = { version = "0.9.2", default-features = false, features = ["simd"] }

[target.'cfg(not(any(target_feature = "avx2", target_feature = "avx")))'.dependencies]
blake2 = { version = "0.9.2", default-features = false }

[dependencies]
aes = { version = "0.7.5", default-features = false, features = ["ctr"] }
aes-gcm = { version = "0.8.0", features = ["heapless"] }
displaydoc = { version = "0.2", default-features = false }
aligned-cmov = "=2.0.0"
balanced-tree-index = "2.0.0"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
rand_core = { version = "0.6", default-features = false }
rand_hc = "0.3"
subtle = { version = "2", default-features = false }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../incubator-teaclave-sgx-sdk/sgx_alloc" }
sgx_backtrace = { path = "../../incubator-teaclave-sgx-sdk/sgx_backtrace" }
sgx_backtrace_sys = { path = "../../incubator-teaclave-sgx-sdk/sgx_backtrace_sys" }
sgx_build_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_build_helper" }
sgx_cov = { path = "../../incubator-teaclave-sgx-sdk/sgx_cov" }
sgx_crypto_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_crypto_helper" }
sgx_libc = { path = "../../incubator-teaclave-sgx-sdk/sgx_libc" }
sgx_demangle = { path = "../../incubator-teaclave-sgx-sdk/sgx_demangle" }
sgx_rand = { path = "../../incubator-teaclave-sgx-sdk/sgx_rand" }
sgx_rand_derive = { path = "../../incubator-teaclave-sgx-sdk/sgx_rand_derive" }
sgx_serialize = { path = "../../incubator-teaclave-sgx-sdk/sgx_serialize" }
sgx_serialize_derive = { path = "../../incubator-teaclave-sgx-sdk/sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../../incubator-teaclave-sgx-sdk/sgx_serialize_derive_internals" }
sgx_signal = { path = "../../incubator-teaclave-sgx-sdk/sgx_signal" }
sgx_tcrypto = { path = "../../incubator-teaclave-sgx-sdk/sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../../incubator-teaclave-sgx-sdk/sgx_tcrypto_helper" }
sgx_tdh = { path = "../../incubator-teaclave-sgx-sdk/sgx_tdh" }
sgx_tkey_exchange = { path = "../../incubator-teaclave-sgx-sdk/sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../../incubator-teaclave-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../../incubator-teaclave-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../../incubator-teaclave-sgx-sdk/sgx_tse" }
sgx_tseal = { path = "../../incubator-teaclave-sgx-sdk/sgx_tseal" }
sgx_tstd = { path = "../../incubator-teaclave-sgx-sdk/sgx_tstd" }
sgx_tunittest = { path = "../../incubator-teaclave-sgx-sdk/sgx_tunittest" }
sgx_types = { path = "../../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_ucrypto = { path = "../../incubator-teaclave-sgx-sdk/sgx_ucrypto" }
sgx_unwind = { path = "../../incubator-teaclave-sgx-sdk/sgx_unwind" }
sgx_urts = { path = "../../incubator-teaclave-sgx-sdk/sgx_urts" }
